# ynab-mcp-server

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: debug_raw.py  list_tags.py  list_tools_describe.py  run_http.py  tool_schema.py  update_readme_snapshot.py
tests/: test_health_tool.py  test_params.py  test_post_body.py  test_server.py  test_tags_filtering.py
ynab_mcp_server/: __init__.py  main.py  openapi_loader.py  server.py
